# CumuloNimbus

./: .env-example  .gitignore  Cargo.toml  README.md  docker-compose.yml  example.tsky
services/agrometeo-simulator-py/: Dockerfile  requirements.txt
services/agrometeo-simulator-py/src/: publisher.py  subscriber.py
services/baker-rs/: Cargo.toml  bridge.js  compute.js
services/baker-rs/lib/bridge/: Cargo.toml  bridge.wasm  index.html  index.js  test.c  test.cpp  test.wasm  test.wat
services/baker-rs/lib/processor/: Cargo.toml  test.c  test.wasm  test.wat
services/baker-rs/lib/processor/src/: lib.rs
services/baker-rs/lib/recipe_keeper/: Cargo.toml
services/baker-rs/lib/recipe_keeper/src/: lib.rs
services/baker-rs/pg_migrations/: 20240627063530_setup.down.sql  20240627063530_setup.up.sql
services/baker-rs/src/: main.rs
services/ingestor-rs/: Cargo.toml
services/ingestor-rs/lib/dispatcher/: Cargo.toml
services/ingestor-rs/lib/dispatcher/migrations/: 20230803104915_setup.sql
services/ingestor-rs/lib/dispatcher/src/: lib.rs
services/ingestor-rs/lib/housekeeper/: Cargo.toml
services/ingestor-rs/lib/housekeeper/src/: lib.rs
services/ingestor-rs/lib/microkeeper/: Cargo.toml
services/ingestor-rs/lib/microkeeper/src/: lib.rs
services/ingestor-rs/lib/mqtt_ingestor/: Cargo.toml
services/ingestor-rs/lib/mqtt_ingestor/src/: lib.rs
services/ingestor-rs/lib/service_bus/: Cargo.toml
services/ingestor-rs/lib/service_bus/src/: build.rs  lib.rs
services/ingestor-rs/lib/service_bus/src/schemas/: persistor_capnp.rs
services/ingestor-rs/migrations/: 20230803104915_setup.sql
services/ingestor-rs/src/: main.rs
services/intercom/: Cargo.toml
services/intercom-rs/: Cargo.toml
services/intercom-rs/src/: build.rs  lib.rs
services/intercom-rs/src/schemas/: baker_capnp.rs  dataseries_capnp.rs  mod.rs  persistor_capnp.rs
services/intercom/capnp/: baker.capnp  dataseries.capnp  persistor.capnp
services/intercom/src/: build.rs  lib.rs
services/intercom/src/schemas/: persistor_capnp.rs
services/persistor-rs/: Cargo.toml
services/persistor-rs/lib/datakeeper/: Cargo.toml
services/persistor-rs/lib/datakeeper/src/: lib.rs
services/persistor-rs/migrations/: 20240627063530_setup.down.sql  20240627063530_setup.up.sql
services/persistor-rs/src/: main.rs
services/service-bus/capnp/: addressbook.capnp  persistor.capnp
