[workspace]
resolver = "2"

members = [
    './services/ingestor-rs',
    './services/ingestor-rs/lib/mqtt_ingestor',
    './services/ingestor-rs/lib/dispatcher',
    './services/ingestor-rs/lib/housekeeper',
    './services/ingestor-rs/lib/microkeeper',
    './services/persistor-rs',
    './services/persistor-rs/lib/datakeeper',
    './services/intercom-rs',
]
