[package]
name = "ingestor"
version = "0.1.0"
edition = "2021"
include = ["/src", "/lib"]

[dependencies]
anyhow = "1.0.72"
tokio = { version = "1.29.1", features = ["full"] }
mqtt_ingestor = { path = './lib/mqtt_ingestor' }
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio-native-tls"] }
intercom = { path = '../intercom' }
dispatcher = { path = './lib/dispatcher' }
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features=["env-filter"]}
chrono = "0.4.38"

[[bin]]
name = "ingestor"
path = "src/main.rs"
