[package]
name = "intercom"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-global-executor = "2.3.1"
capnp = "0.17.2"
flate2 = "1.0.26"
futures-lite = "1.13.0"
lapin = "2.3.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[build-dependencies]
capnpc = "0.17.2"
