[package]
name = "processor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.38", features = ["clock"] }
sqlx = { version = "0.7.4", features = ["postgres", "sqlite", "chrono", "tls-rustls", "runtime-tokio-native-tls", "uuid"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v8"] }
intercom = { path = '../../../intercom-rs' }
tokio = { version = "1.37.0", features = ["full"] }
wasmtime = { version = "22.0" }