[package]
name = "dispatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio-native-tls"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v8"] }
service_bus = { path = '../service_bus' }

