[package]
name = "microkeeper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
thiserror = "1.0"
chrono = "0.4.38"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio-native-tls"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v8"] }
tokio = { version = "1.29.1", features = ["full"] }

intercom = { path = '../../../intercom-rs' }
