[package]
name = "mqtt_ingestor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.38", features = [] }
rumqttc = "0.22.0"
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v8"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
async-global-executor = "2.3.1"

dispatcher = { path = '../dispatcher' }
