[package]
name = "datakeeper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-native-tls"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v8"] }
intercom = { path = '../../../intercom' }

